--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -15,13 +15,13 @@
                 </tr>
             </thead>
             <tbody>
-                @if (TableLowercaseNamePlaceholder == null)
+                @if (games == null)
                 {
                     <tr>
                         @* LoadingCountCodePlaceholder *@
                     </tr>
                 }
-                else if (TableLowercaseNamePlaceholder.Count == 0)
+                else if (games.Count == 0)
                 {
                     <tr>
                         @* ZeroCountCodePlaceholder *@
@@ -29,7 +29,7 @@
                 }
                 else
                 {
-                    @foreach (var game in TableLowercaseNamePlaceholder)
+                    @foreach (var game in games)
                     {
                         <tr>
                             <td>@game.Id</td>
@@ -47,10 +47,10 @@
 </section>
 
 @code {
-    List<GameAdminDataTransferObject>? TableLowercaseNamePlaceholder = null;
+    List<GameAdminDataTransferObject>? games = null;
 
     protected override async Task OnInitializedAsync()
     {
-        TableLowercaseNamePlaceholder = await GameAdminService.GetAllAsync();
+        games = await GameAdminService.GetAllAsync();
     }
 }
