--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -1,4 +1,4 @@
-@page "/admin/UrlNamePlaceholder-edit/{id:guid?}"
+@page "/admin/game-edit/{id:guid?}"
 @rendermode InteractiveAuto
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
@@ -41,7 +41,7 @@
           }
         </div>
         <div class="col">
-          <a href="/admin/UrlNamePlaceholder-list">Cancel</a>
+          <a href="/admin/game-list">Cancel</a>
           @if (Id.Equals(Guid.Empty))
           {
             <button type="submit" class="btn btn-primary">Create</button>
@@ -129,7 +129,7 @@
         return;
       }
 
-      NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{newGameAdminDto.Id}");
+      NavigationManager.NavigateTo($"/admin/game-edit/{newGameAdminDto.Id}");
     }
     else
     {
@@ -153,7 +153,7 @@
     }
 
     await GameAdminRepository.DeleteAsync(userName, Id);
-    NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-list");
+    NavigationManager.NavigateTo($"/admin/game-list");
   }
 
   @* OnChangeCodePlaceholder *@
