--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -27,7 +27,7 @@
     <h1>HumanNamePlaceholder Modification</h1>
   }
   <article>
-    <EditForm class="container" Model="EntityLowercaseNamePlaceholderAdminEditVm" OnValidSubmit="HandleSubmit">
+    <EditForm class="container" Model="gameAdminEditVm" OnValidSubmit="HandleSubmit">
       <DataAnnotationsValidator />
       <ValidationSummary class="text-danger" />
 
@@ -59,7 +59,7 @@
 @code {
   [Parameter]
   public Guid Id { get; set; }
-  EntityNamePlaceholderAdminEditVm EntityLowercaseNamePlaceholderAdminEditVm { get; set; } = new EntityNamePlaceholderAdminEditVm();
+  EntityNamePlaceholderAdminEditVm gameAdminEditVm { get; set; } = new EntityNamePlaceholderAdminEditVm();
 
   @* ListDeclarationCodePlaceholder *@
 
@@ -97,11 +97,11 @@
 
     if (databaseEntityNamePlaceholderAdminDto == null)
     {
-      EntityLowercaseNamePlaceholderAdminEditVm = new EntityNamePlaceholderAdminEditVm();
+      gameAdminEditVm = new EntityNamePlaceholderAdminEditVm();
     }
     else
     {
-      EntityLowercaseNamePlaceholderAdminEditVm = EntityNamePlaceholderAdminEditVm.FromEntityNamePlaceholderAdminDto(databaseEntityNamePlaceholderAdminDto);
+      gameAdminEditVm = EntityNamePlaceholderAdminEditVm.FromEntityNamePlaceholderAdminDto(databaseEntityNamePlaceholderAdminDto);
     }
   }
 
@@ -117,12 +117,12 @@
 
     @* RequiredPropertyPlaceholder *@
 
-    var EntityLowercaseNamePlaceholderAdminDto = EntityNamePlaceholderAdminEditVm.ToEntityNamePlaceholderAdminDto(EntityLowercaseNamePlaceholderAdminEditVm);
-    EntityLowercaseNamePlaceholderAdminDto.ApplicationUserName = userName;
+    var gameAdminDto = EntityNamePlaceholderAdminEditVm.ToEntityNamePlaceholderAdminDto(gameAdminEditVm);
+    gameAdminDto.ApplicationUserName = userName;
 
     if (Id.Equals(Guid.Empty))
     {
-      var newEntityNamePlaceholderAdminDto = await EntityNamePlaceholderAdminRepository.AddAsync(EntityLowercaseNamePlaceholderAdminDto);
+      var newEntityNamePlaceholderAdminDto = await EntityNamePlaceholderAdminRepository.AddAsync(gameAdminDto);
 
       if (newEntityNamePlaceholderAdminDto == null)
       {
@@ -133,7 +133,7 @@
     }
     else
     {
-      await EntityNamePlaceholderAdminRepository.EditAsync(EntityLowercaseNamePlaceholderAdminDto);
+      await EntityNamePlaceholderAdminRepository.EditAsync(gameAdminDto);
     }
   }
 
