--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/_Imports.razor
@@ -1,1 +1,1 @@
-@using ApplicationNamePlaceholder.BusinessLogic.Grid.Admin.EntityNamePlaceholderGrid
+@using BlazorCrudDotNet8.BusinessLogic.Grid.Admin.EntityNamePlaceholderGrid
