--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -1,9 +1,9 @@
-<h1>@Mode EntityNamePlaceholder</h1>
+<h1>@Mode Game</h1>
 
 <hr />
-@if (EntityNamePlaceholder is not null)
+@if (Game is not null)
 {
-    <EditForm Model="EntityNamePlaceholder"
+    <EditForm Model="Game"
               OnInvalidSubmit="(async () => await HandleSubmitAsync(false))"
               OnValidSubmit="(async () => await HandleSubmitAsync(true))">
         <DataAnnotationsValidator />
@@ -12,9 +12,9 @@
         <p>
             <label>
                 Name:
-                <InputText @bind-Value="EntityNamePlaceholder.Name" @oninput="HandleNameChange" />
-                <ConcurrencyField Model="EntityNamePlaceholder"
-                                  DbModel="DbEntityNamePlaceholder"
+                <InputText @bind-Value="Game.Name" @oninput="HandleNameChange" />
+                <ConcurrencyField Model="Game"
+                                  DbModel="DbGame"
                                   Property="obj => obj?.Name" />
             </label>
         </p>
@@ -41,13 +41,13 @@
     [Parameter]
     public bool IsAdd { get; set; }
 
-    // The EntityNamePlaceholder to upsert.
+    // The Game to upsert.
     [Parameter]
-    public EntityNamePlaceholder? EntityNamePlaceholder { get; set; }
+    public Game? Game { get; set; }
 
-    // The database version of EntityNamePlaceholder if a concurrency issue.
+    // The database version of Game if a concurrency issue.
     [Parameter]
-    public EntityNamePlaceholder? DbEntityNamePlaceholder { get; set; }
+    public Game? DbGame { get; set; }
 
     // Prevent multiple asynchronous operations at the same time.
     [Parameter]
