--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Add.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Add.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager Navigation
 @inject IPageHelper PageHelper
 
-<PageTitle>HumanNamePlaceholder Add</PageTitle>
+<PageTitle>Game Add</PageTitle>
 
 @if (Game is not null)
 {
