--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor
@@ -1,10 +1,10 @@
 @page "/admin/UrlNamePlaceholder"
 @page "/admin/UrlNamePlaceholder/{Page:int}"
 @rendermode InteractiveServer
-@inject IEntityNamePlaceholderFilters Filters
+@inject IGameFilters Filters
 @inject IDbContextFactory<ApplicationDbContext> DbFactory
 @inject NavigationManager Navigation
-@inject EntityNamePlaceholderGridQueryAdapter QueryAdapter
+@inject GameGridQueryAdapter QueryAdapter
 
 <PageTitle>HumanNamePlaceholder Home</PageTitle>
 
@@ -40,11 +40,11 @@
         <div class="row contact-header">
             <div class="col-2">&nbsp;</div>
             <div class="col-3"
-            @onclick="@(async ()=>await ToggleAsync(EntityNamePlaceholderFilterColumns.Name))">
-                <SortIndicator Column="@(EntityNamePlaceholderFilterColumns.Name)" />&nbsp;Name
+            @onclick="@(async ()=>await ToggleAsync(GameFilterColumns.Name))">
+                <SortIndicator Column="@(GameFilterColumns.Name)" />&nbsp;Name
             </div>
         </div>
-        @if (Filters.Loading || EntityNamePlaceholders is null)
+        @if (Filters.Loading || Games is null)
         {
             <div class="row">
                 <div class="col-12 alert alert-info">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         }
-        @if (EntityNamePlaceholders is not null && EntityNamePlaceholders.Count == 0)
+        @if (Games is not null && Games.Count == 0)
         {
             <div class="row">
                 <div class="col-12 alert alert-warning">
@@ -60,12 +60,12 @@
                 </div>
             </div>
         }
-        @if (EntityNamePlaceholders is not null)
+        @if (Games is not null)
         {
-            @foreach (var contact in EntityNamePlaceholders)
+            @foreach (var contact in Games)
             {
-                <EntityNamePlaceholderRow @key=contact CurrentEntityNamePlaceholder="contact"
-                            DeleteEntityNamePlaceholder="DeleteEntityNamePlaceholderAsync" />
+                <GameRow @key=contact CurrentGame="contact"
+                            DeleteGame="DeleteGameAsync" />
             }
         }
     </div>
@@ -86,8 +86,8 @@
     // A wrapper for grid-related activity (like delete).
     private GridWrapper Wrapper { get; set; } = new GridWrapper();
 
-    // Current page of EntityNamePlaceholder.
-    private ICollection<EntityNamePlaceholder>? EntityNamePlaceholders { get; set; }
+    // Current page of Game.
+    private ICollection<Game>? Games { get; set; }
 
     // Helper method to set disabled on class for paging.
     // condition: When the element is active (and therefore should not be disabled).
@@ -138,7 +138,7 @@
     // Used to toggle the grid sort. Will either switch to "ascending" on a new
     // column, or toggle between "ascending" and "descending" on a column with the
     // sort already set.
-    private Task ToggleAsync(EntityNamePlaceholderFilterColumns col)
+    private Task ToggleAsync(GameFilterColumns col)
     {
         if (Filters.SortColumn == col)
         {
@@ -153,7 +153,7 @@
 
     // Deletes a contact.
     // <snippet1>
-    private async Task DeleteEntityNamePlaceholderAsync()
+    private async Task DeleteGameAsync()
     {
         using var context = DbFactory.CreateDbContext();
         Filters.Loading = true;
@@ -191,7 +191,7 @@
             Wrapper.DeleteRequestId = Guid.Empty;
         }
 
-        EntityNamePlaceholders = new List<EntityNamePlaceholder>();
+        Games = new List<Game>();
 
         using var context = DbFactory.CreateDbContext();
         var query = context.TableNamePlaceholder?.AsQueryable();
@@ -199,7 +199,7 @@
         if (query is not null)
         {
             // Run the query to load the current page.
-            EntityNamePlaceholders = await QueryAdapter.FetchAsync(query);
+            Games = await QueryAdapter.FetchAsync(query);
         }
 
         Filters.Loading = false;
