--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
@@ -1,4 +1,4 @@
-@page "/admin/UrlNamePlaceholder/edit/{EntityNamePlaceholderId:guid}"
+@page "/admin/UrlNamePlaceholder/edit/{GameId:guid}"
 @rendermode InteractiveServer
 @implements IDisposable
 @inject IDbContextFactory<ApplicationDbContext> DbFactory
@@ -8,15 +8,15 @@
 
 <PageTitle>HumanNamePlaceholder Edit</PageTitle>
 
-@if (EntityNamePlaceholder is null && !Busy)
+@if (Game is null && !Busy)
 {
-    <p>Could not find HumanNamePlaceholder with id @EntityNamePlaceholderId.</p>
+    <p>Could not find HumanNamePlaceholder with id @GameId.</p>
 }
 else
 {
-    <EntityNamePlaceholderForm Busy="Busy" 
-                 EntityNamePlaceholder="EntityNamePlaceholder" 
-                 DbEntityNamePlaceholder="DbEntityNamePlaceholder" 
+    <GameForm Busy="Busy" 
+                 Game="Game" 
+                 DbGame="DbGame" 
                  IsAdd="false" 
                  CancelRequest="Cancel" 
                  ValidationResult="@(async (success) => await ValidationResultAsync(success))" />
@@ -43,13 +43,13 @@ else
 
 @code {
     [Parameter]
-    public Guid EntityNamePlaceholderId { get; set; }
+    public Guid GameId { get; set; }
 
     private ApplicationDbContext? Context { get; set; }
 
-    private EntityNamePlaceholder EntityNamePlaceholder { get; set; } = new EntityNamePlaceholder();
+    private Game Game { get; set; } = new Game();
 
-    private EntityNamePlaceholder DbEntityNamePlaceholder { get; set; } = new EntityNamePlaceholder();
+    private Game DbGame { get; set; } = new Game();
 
     private bool Busy;
 
@@ -69,11 +69,11 @@ else
 
             if (Context is not null && Context.TableNamePlaceholder is not null)
             {
-                var LowercaseNamePlaceholder = await Context.TableNamePlaceholder.SingleOrDefaultAsync(x => x.Id == EntityNamePlaceholderId);
+                var LowercaseNamePlaceholder = await Context.TableNamePlaceholder.SingleOrDefaultAsync(x => x.Id == GameId);
 
                 if (LowercaseNamePlaceholder is not null)
                 {
-                    EntityNamePlaceholder = LowercaseNamePlaceholder;
+                    Game = LowercaseNamePlaceholder;
                 }
             }
         }
@@ -106,7 +106,7 @@ else
             }
 
             EditSuccessState.Success = true;
-            Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{EntityNamePlaceholder.Id}");
+            Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
         }
         catch (DbUpdateConcurrencyException dbex)
         {
@@ -118,11 +118,11 @@ else
 
             if (dbValues is null)
             {
-                Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{EntityNamePlaceholder.Id}");
+                Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
                 return;
             }
 
-            DbEntityNamePlaceholder = (EntityNamePlaceholder)dbValues.ToObject();
+            DbGame = (Game)dbValues.ToObject();
 
             dbex.Entries[0].OriginalValues.SetValues(dbValues);
             Error = false;
