--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
@@ -69,11 +69,11 @@ else
 
             if (Context is not null && Context.TableNamePlaceholder is not null)
             {
-                var LowercaseNamePlaceholder = await Context.TableNamePlaceholder.SingleOrDefaultAsync(x => x.Id == GameId);
+                var game = await Context.TableNamePlaceholder.SingleOrDefaultAsync(x => x.Id == GameId);
 
-                if (LowercaseNamePlaceholder is not null)
+                if (game is not null)
                 {
-                    Game = LowercaseNamePlaceholder;
+                    Game = game;
                 }
             }
         }
