--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
@@ -1,4 +1,4 @@
-@page "/admin/UrlNamePlaceholder/edit/{GameId:guid}"
+@page "/admin/game/edit/{GameId:guid}"
 @rendermode InteractiveServer
 @implements IDisposable
 @inject IDbContextFactory<ApplicationDbContext> DbFactory
@@ -106,7 +106,7 @@ else
             }
 
             EditSuccessState.Success = true;
-            Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
+            Navigation.NavigateTo($"/admin/game/view/{Game.Id}");
         }
         catch (DbUpdateConcurrencyException dbex)
         {
@@ -118,7 +118,7 @@ else
 
             if (dbValues is null)
             {
-                Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
+                Navigation.NavigateTo($"/admin/game/view/{Game.Id}");
                 return;
             }
 
@@ -140,7 +140,7 @@ else
     private void Cancel()
     {
         Busy = true;
-        Navigation.NavigateTo($"/admin/UrlNamePlaceholder/{PageHelper.Page}");
+        Navigation.NavigateTo($"/admin/game/{PageHelper.Page}");
     }
 
     public void Dispose() => Context?.Dispose();
